frontend/src/pages/ModManager/style.scss
@use '../../styles/abstracts/colors';
@use '../../styles/abstracts/common';

$table-base-color: hsl(240, 5%, 22%);
$info-bar-height: 3.5em;

.info-bar {
    min-height: $info-bar-height;
    background-color: colors.$background-primary;
    box-shadow: common.$shadow;
    position: relative;

    z-index: 1;

    display: flex;
    justify-content: space-between;
}

.info-bar-button-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 0.5em;
}

.home-button {
    min-width: 3em;
    min-height: 3em;

    //color: white;
}

.archive-info-main {
    display: grid;
    justify-content: center;
    
    text-align: center;
    margin-top: 0.3em;

    &__header {
        color: hsl(240, 10%, 51%);
    }

    &__info {
        color: white;
        font-size: 1.1em;
    }
}

.archive-info-rest {
    display: grid;
    justify-content: center;
    margin-top: 0.3em;

    margin-right: 1em;

    & > .border {
        border-top: 1px solid hsl(240, 9%, 38%);
    }

    & > p {
        color: white;
    }
}

.mod-manager-container {
    display: flex;
    min-height: calc(100vh - $info-bar-height - 0.03em);
}

.mod-manager-sidebar {
    z-index: 0;
    flex-shrink: 1;

    background-color: colors.$background-primary;
    box-shadow: -1px 0px 2px colors.$shadow-color;

    &--container {
        //border: 1px dotted red;
        margin: 0.7em;

        & > button {
            width: 100%;
            margin-bottom: 0.5em;
        }
    }

    &--divider {
        background-color: colors.$divider-color;
        height: 1px;
        margin-bottom: 0.5em;
    }
}

.mods-panel {
    background-color: colors.$background-primary;
    border-radius: common.$border-radius;
    box-shadow: common.$shadow;

    display: inline-block;
    padding: 1em;
    width: 50%;
    min-width: 20em;

    margin-left: auto;
    margin-right: auto;
    margin-top: 1em;
    margin-bottom: 1em;

    height: min-content;

    &__list {
        background-color: $table-base-color;
        list-style-type: none;
        margin-left: 0;
        padding-left: 0;
        
        box-shadow: 0px 0px 2px colors.$shadow-color inset;

        &--item {
            padding: 0.3em;
            color: white;

            &:nth-child(even) {
                background-color: darken($table-base-color, 2%);
            }   
        }
    }
}

.highlight {
    color: hsl(28, 86%, 53%);
}

.delete-mods-modal {
    &__text {
        margin-bottom: 2em;
    }

    &__yes-button {
        margin-right: 0.5em;
    }

    &__no-button {
        margin-left: 0.5em;
    }

    &__button-container {
        width: max-content;
        margin-left: auto;
        margin-right: auto;
    }
}

